# Long-decompiler

./: .gitignore  README.md  meson.build  meson_options.txt  sed_sub
include/: action.hh  address.hh  architecture.hh  bfd_arch.hh  block.hh  blockaction.hh  callgraph.hh  capability.hh  cast.hh  codedata.hh  comment.hh  comment_ghidra.hh  condexe.hh  context.hh  coreaction.hh  cover.hh  cpool.hh  cpool_ghidra.hh  crc32.hh  database.hh  database_ghidra.hh  doccore.hh  docmain.hh  double.hh  dynamic.hh  emulate.hh  emulateutil.hh  error.hh  filemanage.hh  float.hh  flow.hh  fspec.hh  funcdata.hh  ghidra_arch.hh  ghidra_context.hh  ghidra_process.hh  ghidra_translate.hh  globalcontext.hh  grammar.hh  graph.hh  (+57 more)
src/: .!71054!funcdata_op.cc  .!71929!codedata.cc  Doxyfile  Makefile  action.cc  address.cc  architecture.cc  bfd_arch.cc  block.cc  blockaction.cc  callgraph.cc  capability.cc  cast.cc  codedata.cc  comment.cc  comment_ghidra.cc  condexe.cc  config_bfd.h  consolemain.cc  context.cc  coreaction.cc  cover.cc  cpool.cc  cpool_ghidra.cc  crc32.cc  database.cc  database_ghidra.cc  double.cc  dynamic.cc  emulate.cc  emulateutil.cc  filemanage.cc  float.cc  flow.cc  fspec.cc  funcdata.cc  funcdata_block.cc  funcdata_op.cc  funcdata_varnode.cc  ghidra_arch.cc  (+64 more)
